css: fix History input box overlapping

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -812,6 +812,7 @@ button.show-console span {
 
 .history-time-col-r {
     padding-top: 34px;
+    padding-left: 2em;
 }
 
 .jarviswidget > div {
